<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="201dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:hint="@string/car_number"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="201dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:text="@string/text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText1" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="201dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="182dp"
            android:layout_height="152dp"
            android:contentDescription="@string/add_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            app:layout_constraintVertical_bias="0.395"
            app:srcCompat="@drawable/add_image"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
