<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="160dp"
    android:layout_width="match_parent"
    android:elevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:padding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemCarNumberText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:hint="Car number"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/itemImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:hint="+91 9377612136"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/itemImageView"
            app:layout_constraintTop_toBottomOf="@id/itemCarNumberText" />

        <TextView
            android:id="@+id/tpArrivalTime"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/arrival_time"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemImageView" />

        <TextView
            android:id="@+id/itemArrivalTime"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:hint="@string/_6_69_am"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tpArrivalTime"
            app:layout_constraintTop_toBottomOf="@id/itemImageView" />

        <TextView
            android:id="@+id/tpDepartureTime"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:text="@string/departure_time"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tpArrivalTime" />

        <TextView
            android:id="@+id/itemDepartureTime"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:hint="@string/_6_69_am"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/tpDepartureTime"
            app:layout_constraintTop_toBottomOf="@id/tpArrivalTime" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
